--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@
     clear: both;
 }
 
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
 /* debug rules */
 .debug .viewport {
     background-color: aqua;
@@ -24,6 +28,18 @@
     background-color: blueviolet;
 }
 
+.debug .column {
+    background-color: thistle;
+}
+
+.debug .start{
+    background-color: tomato;
+}
+
+.debug .end{
+    background-color: violet;
+}
+
 /* common rules  */
 .viewport {
     width: 100vw;
@@ -34,6 +50,14 @@
 .link {
     text-decoration: none;
     color: #7d7f84;
+}
+
+.selected {
+    border-left: 2px solid yellow;
+}
+
+.side_li, .logo, .elenco {
+    padding: 0 1.3rem;
 }
 
 /*********************
@@ -53,7 +77,58 @@ main {
     height: 100%;
     background-color: #000000;
     float: left;
+    padding: 1rem 0;
 }
+
+.column {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.start {
+    width: 100%;
+    height: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.logo {
+    font-weight: bold;
+    font-size: 1.5rem;
+    color: white;
+    vertical-align: middle;
+}
+.logo img {
+    filter: invert(1);
+}
+.logo h1 {
+    display: inline-block;
+    padding-bottom: 1.5rem;
+}
+.logo span {
+    font-size: .5rem;
+}
+
+.playlist {
+    color: white;
+}
+
+.end {
+    width: 100%;
+    height: 10%;
+}
+
+.end ul {
+    margin-bottom: .7rem;
+}
+.end h3 {
+    color: white;
+}
+
 
 /* main_content */
 .main_content {
@@ -80,7 +155,7 @@ main {
     color: white;
     border: 1px solid white;
     border-radius: 2rem;
-    padding: .7rem 1rem;
+    padding: .7rem 2rem;
     margin-right: 1rem;
 }
 .upgrade:hover {
