aggiunti dettagli e spazi alla sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,10 @@ body {
     padding: 0 1.3rem;
 }
 
+.overwhite:hover {
+    color: white;
+}
+
 /*********************
 Header  
 *********************/
@@ -90,7 +94,7 @@ main {
 
 .start {
     width: 100%;
-    height: 45%;
+    height: 30%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -112,9 +116,18 @@ main {
 .logo span {
     font-size: .5rem;
 }
+.selected a {
+    color: #e7e7e7;
+}
 
 .playlist {
+    margin-top: 1rem;
     color: white;
+}
+
+.search li, .playlist li {
+    line-height: 1.6rem;
+    font-size: .8rem;
 }
 
 .end {
@@ -127,6 +140,8 @@ main {
 }
 .end h3 {
     color: white;
+    font-size: .9rem;
+    margin-top: 1rem;
 }
 
 
@@ -159,7 +174,7 @@ main {
     margin-right: 1rem;
 }
 .upgrade:hover {
-    font-size: 1rem;
+    font-size: .7rem;
 }
 
 /* brani */
