--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,17 @@ body {
 /* utility */
 .link {
     text-decoration: none;
+    list-style: none;
     color: #7d7f84;
 }
 
 .selected {
-    border-left: 2px solid yellow;
+    border-left: 2px solid #adff2f;
+}
+.picked {
+    width: 40px;
+    margin: .3rem auto;
+    border: .5px solid #adff2f;
 }
 
 .side_li, .logo, .elenco {
@@ -150,6 +156,15 @@ main {
     width: calc(100% - 180px);
     height: 100%;
     float: left;
+}
+
+.filter ul {
+    display: flex;
+    justify-content: center;
+}
+.filter li {
+    margin: 1rem .6rem;
+    font-size: .8rem;
 }
 
 /* head */
