--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,11 @@ body {
     border: .5px solid #adff2f;
 }
 
+.icon {
+    width: 1.5rem;
+    vertical-align: middle;
+}
+
 .side_li, .logo, .elenco {
     padding: 0 1.3rem;
 }
@@ -81,9 +86,13 @@ main {
     height: calc(100% - 60px);
 }
 
+.brani h2, .brani h3 {
+    color: white;
+}
+
 /* sidebar */
 .sidebar {
-    width: 180px;
+    width: 220px;
     height: 100%;
     background-color: #000000;
     float: left;
@@ -105,6 +114,9 @@ main {
     flex-direction: column;
     justify-content: space-between;
 }
+.start > div {
+    margin-bottom: 1rem;
+}
 
 .logo {
     font-weight: bold;
@@ -117,7 +129,8 @@ main {
 }
 .logo h1 {
     display: inline-block;
-    padding-bottom: 1.5rem;
+    padding-bottom: 1.3rem;
+    margin-left: -1.4rem;
 }
 .logo span {
     font-size: .5rem;
@@ -127,13 +140,13 @@ main {
 }
 
 .playlist {
-    margin-top: 1rem;
     color: white;
 }
 
-.search li, .playlist li {
-    line-height: 1.6rem;
+.search li, .playlist li, .end li {
+    line-height: 1.8rem;
     font-size: .8rem;
+    vertical-align: middle;
 }
 
 .end {
@@ -144,6 +157,7 @@ main {
 .end ul {
     margin-bottom: .7rem;
 }
+.end li 
 .end h3 {
     color: white;
     font-size: .9rem;
@@ -153,7 +167,7 @@ main {
 
 /* main_content */
 .main_content {
-    width: calc(100% - 180px);
+    width: calc(100% - 220px);
     height: 100%;
     float: left;
 }
@@ -161,6 +175,7 @@ main {
 .filter ul {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 .filter li {
     margin: 1rem .6rem;
@@ -170,11 +185,11 @@ main {
 /* head */
 .head {
     width: 100%;
-    height: 60px;
+    height: 80px;
     background-color: #080b12;
     text-align: right;
     vertical-align: middle;
-    padding-top: 1.2rem;
+    padding-top: 1.7rem;
 }
 
 .upgrade {
@@ -195,8 +210,37 @@ main {
 /* brani */
 .brani {
     width: 100%;
-    height: calc(100% - 60px);
+    height: calc(100% - 80px);
     background-color: #141922;
+}
+
+.row {
+    padding: 0 2rem;
+}
+.row h2 {
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+.list {
+    display: flex;
+}
+.list > div {
+    width: calc(100%/6);
+    height: 50px
+}
+.list img {
+    width: 100%;
+}
+
+.song {
+    text-align: center;
+}
+.song h3 {
+    margin: .5rem 0;
+}
+.song h4 {
+    color: #7d7f84;
 }
 
 /*********************
