--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,14 @@ footer {
 .control .left {
     display: flex;
     align-items: center;
-    
+}
+.control .right {
+    color: white;
+    padding-top: 1.5rem;
+    display: flex;
+}
+.control .right i {
+    margin-right: .7rem;
 }
 .control img {
     height: 70%;
@@ -327,3 +334,15 @@ footer {
 .save i:first-child {
     margin-right: .5rem;
 }
+.volume {
+    width: 60%;
+    height: 5px;
+    margin-top: .3rem;
+    background-color: #5a5a5a;
+}
+.volume > div {
+    width: 20%;
+    height: 100%;
+    background-color: #7d7f84;
+}
+
