--- a/css/style.css
+++ b/css/style.css
@@ -302,20 +302,35 @@ footer {
 .control .left, .control .right {
     width: 220px;
     height: 60px;
+    display: flex;
 }
 .control .middle {
-    width: 450px;
+    text-align: center;
+    font-size: .8rem;
+    color: white;
+    width: 440px;
     height: 60px;
-    background-color: khaki;
+    padding-top: .5rem;
 }
-.control .left {
+.control .middle i {
+    margin-right: 1rem;
+}
+.big {
+    font-size: 1.2rem;
+}
+
+.timebar {
     display: flex;
+    justify-content: space-between;
+    font-size: .7rem;
+}
+
+.control .left {
     align-items: center;
 }
 .control .right {
     color: white;
     padding-top: 1.5rem;
-    display: flex;
 }
 .control .right i {
     margin-right: .7rem;
